<resources>
    <string name="app_name">Sport_shop</string>
    <string name="welcome_to_our_sport_shop_app">Welcome to our sport shop app !</string>
    <string name="make_your_choice">Make your choice</string>
    <string name="reserve">Choose</string>
    <string name="confirm_and_go_to_the_home_page">Confirm and go to the home page</string>
    <string name="image">image</string>
    <string name="price">price</string>
    <string name="size">size</string>
    <string name="show">show</string>
    <string name="this_is_items_you_are_selected">This is items you are selected</string>
    <string name="done">DONE</string>
</resources>