<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    tools:context=".MainActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/img_1"
        android:visibility="visible"
        tools:visibility="visible" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        android:orientation="vertical"
        tools:context=".MainActivity"
        tools:visibility="visible">

        <TextView
            style="@style/textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcome_to_our_sport_shop_app" />

        <TextView
            style="@style/textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/make_your_choice" />

        <Spinner
            style="@style/spinner"
            android:id="@+id/spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/btn"
            android:text="@string/done"
            android:onClick="go_to_next_page"

            />

    </androidx.appcompat.widget.LinearLayoutCompat>

</FrameLayout>